* removed feedback for aesthetic reasons
* added (clear-zbuffer)
* added (pixels-load) for loading pngs into pixel prims
* renamed (upload-pixels) to (pixels-upload)
* added indexed mode polygon support
	- (poly-set-index index-list) 
	- (poly-convert-to-indexed)
* stencil buffer shadows for poly primitives
	- (shadow-light)
	- (shadow-length)
	- (shadow-debug)

0.12

* now uses plt scheme
* fluxus scripts can be written and viewed from the drscheme IDE
* lots of new documentation
* split fluxus up into modular parts - a livecoding application called the 
  scratchpad and a collection of plt extensions for graphics, audio and osc.
* a new autogenerated documentation system and online help command
* new low-level renderer control, with support for multiple renderers,
  scenegraphs and physics worlds
* ported lots of application code into scheme modules
* removed the (edit) and (save-name) commands and added a minimal script 
  file browser interface to the scratchpad
* added (hint-depth-sort) for correctly ordering and rendering transparent
  objects

0.11

* glsl support with (shader) and (shader-set!)
* big (recalc-normals) speedup
* normals recalculated for primitives of type POLYGON
* (keys-down) returns vector of the ascii values of all keys pressed
* (key-special-pressed id) for cursor keys etc
* (keys-special-down) returns vector of all special keys pressed
* kick/twist static object crash fix
* save with text highlighted now actually really safe (saves all rather than 
  selection + random characters)
* immediate mode state fix
* fixed (hint-points) for polygons
* fixed (draw-plane) and (draw-cube) no longer has a plane inside it :)
* equal? implemented for primitive types
* fixed picking when show-fps is turned on
* editor/repl bug fixes
* wireframe/solid z fighting fix
* (time) returns posix time now (don't ask)
* (turtle-attach object) : attaches the turtle to an existing primitive for